--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,438 +1,131 @@
-absl-py==0.7.1
-adal==1.2.1
-addict==2.2.1
-aiohttp==3.6.1
-alabaster==0.7.12
-alembic==1.3.1
-altair==4.0.1
-anaconda-client==1.7.2
-anaconda-navigator==1.9.7
-aniso8601==8.0.0
-anyconfig==0.9.7
-apache-airflow==1.10.7
-apispec==1.3.3
-appdirs==1.4.3
+anyconfig==0.9.11
+appdirs==1.4.4
 appnope==0.1.0
-argcomplete==1.10.2
-arrow==0.12.1
-asn1crypto==0.24.0
-astor==0.8.1
-astroid==2.2.5
-async-timeout==3.0.1
-atomicwrites==1.2.1
-attrs @ file:///tmp/build/80754af9/attrs_1600298409949/work
-audioread==2.1.6
-azure==4.0.0
-azure-applicationinsights==0.1.0
-azure-batch==4.1.3
-azure-common==1.1.18
-azure-cosmosdb-nspkg==2.0.2
-azure-cosmosdb-table==1.0.5
-azure-datalake-store==0.0.44
-azure-eventgrid==1.2.0
-azure-graphrbac==0.40.0
-azure-keyvault==1.1.0
-azure-loganalytics==0.1.0
-azure-mgmt==4.0.0
-azure-mgmt-advisor==1.0.1
-azure-mgmt-applicationinsights==0.1.1
-azure-mgmt-authorization==0.50.0
-azure-mgmt-batch==5.0.1
-azure-mgmt-batchai==2.0.0
-azure-mgmt-billing==0.2.0
-azure-mgmt-cdn==3.1.0
-azure-mgmt-cognitiveservices==3.0.0
-azure-mgmt-commerce==1.0.1
-azure-mgmt-common==0.20.0
-azure-mgmt-compute==4.5.1
-azure-mgmt-consumption==2.0.0
-azure-mgmt-containerinstance==1.4.1
-azure-mgmt-containerregistry==2.7.0
-azure-mgmt-containerservice==4.4.0
-azure-mgmt-cosmosdb==0.4.1
-azure-mgmt-datafactory==0.6.0
-azure-mgmt-datalake-analytics==0.6.0
-azure-mgmt-datalake-nspkg==3.0.1
-azure-mgmt-datalake-store==0.5.0
-azure-mgmt-datamigration==1.0.0
-azure-mgmt-devspaces==0.1.0
-azure-mgmt-devtestlabs==2.2.0
-azure-mgmt-dns==2.1.0
-azure-mgmt-eventgrid==1.0.0
-azure-mgmt-eventhub==2.5.0
-azure-mgmt-hanaonazure==0.1.1
-azure-mgmt-iotcentral==0.1.0
-azure-mgmt-iothub==0.5.0
-azure-mgmt-iothubprovisioningservices==0.2.0
-azure-mgmt-keyvault==1.1.0
-azure-mgmt-loganalytics==0.2.0
-azure-mgmt-logic==3.0.0
-azure-mgmt-machinelearningcompute==0.4.1
-azure-mgmt-managementgroups==0.1.0
-azure-mgmt-managementpartner==0.1.0
-azure-mgmt-maps==0.1.0
-azure-mgmt-marketplaceordering==0.1.0
-azure-mgmt-media==1.0.0
-azure-mgmt-monitor==0.5.2
-azure-mgmt-msi==0.2.0
-azure-mgmt-network==2.6.0
-azure-mgmt-notificationhubs==2.0.0
-azure-mgmt-nspkg==3.0.2
-azure-mgmt-policyinsights==0.1.0
-azure-mgmt-powerbiembedded==2.0.0
-azure-mgmt-rdbms==1.8.0
-azure-mgmt-recoveryservices==0.3.0
-azure-mgmt-recoveryservicesbackup==0.3.0
-azure-mgmt-redis==5.0.0
-azure-mgmt-relay==0.1.0
-azure-mgmt-reservations==0.2.1
-azure-mgmt-resource==2.1.0
-azure-mgmt-scheduler==2.0.0
-azure-mgmt-search==2.0.0
-azure-mgmt-servicebus==0.5.3
-azure-mgmt-servicefabric==0.2.0
-azure-mgmt-signalr==0.1.1
-azure-mgmt-sql==0.9.1
-azure-mgmt-storage==2.0.0
-azure-mgmt-subscription==0.2.0
-azure-mgmt-trafficmanager==0.50.0
-azure-mgmt-web==0.35.0
-azure-nspkg==3.0.2
-azure-servicebus==0.21.1
-azure-servicefabric==6.3.0.0
-azure-servicemanagement-legacy==0.20.6
-azure-storage-blob==1.5.0
-azure-storage-common==1.4.0
-azure-storage-file==1.4.0
-azure-storage-queue==1.4.0
-Babel==2.7.0
-backcall==0.1.0
-backports.tempfile==1.0
-backports.weakref==1.0.post1
-base58==2.0.0
-beautifulsoup4==4.9.1
+APScheduler==3.6.3
+argon2-cffi==20.1.0
+arrow==0.16.0
+async-generator==1.10
+attrs==20.2.0
+backcall==0.2.0
+beautifulsoup4==4.9.3
 binaryornot==0.4.4
-bleach @ file:///tmp/build/80754af9/bleach_1600439572647/work
-blinker==1.4
-bokeh==1.1.0
-boto3==1.12.26
-botocore==1.15.26
-bs4==0.0.1
-bz2file==0.98
-cached-property==1.5.1
+black==19.10b0
+bleach==3.2.1
+brotlipy==0.7.0
 cachetools==4.1.1
-cattrs==0.9.0
 certifi==2020.6.20
-cffi==1.12.3
+cffi @ file:///opt/concourse/worker/volumes/live/74b22aae-8eb9-44eb-6c00-a8a07af62b36/volume/cffi_1600699174113/work
 chardet==3.0.4
-click==7.1.1
-cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1598884132938/work
-clyent==1.2.2
-colorama==0.4.1
-colorlog==4.0.2
-conda==4.7.12
-conda-package-handling==1.3.11
-configparser==3.5.3
+clarifai==2.6.2
+click==7.1.2
+configparser==5.0.1
 cookiecutter==1.6.0
-croniter==0.3.30
-cryptography==2.7
-cssselect==1.1.0
-cvxpy==1.0.11
-cycler==0.10.0
-Cython==0.28.5
-dask==2.12.0
-deap==1.2.2
+coverage==5.3
+cryptography @ file:///opt/concourse/worker/volumes/live/823033e5-92f5-43de-539e-bdc7bc36c81a/volume/cryptography_1598892026131/work
 decorator==4.4.2
 defusedxml==0.6.0
-dill==0.2.8.2
-docutils==0.15.2
-dopamine-rl==2.0.3
-ecos==2.0.7.post1
+EasyProcess==0.3
+emoji==0.6.0
 entrypoints==0.3
-enum-compat==0.0.3
-enum34==1.1.6
-fake-useragent==0.1.11
-fancyimpute==0.4.2
-fastcache==1.0.2
-fastparquet==0.1.6
-Flask==1.1.1
-Flask-Admin==1.5.4
-Flask-AppBuilder==2.2.1
-Flask-Babel==0.12.2
-Flask-Caching==1.3.3
-Flask-Jsonpify==1.5.0
-Flask-JWT-Extended==3.24.1
-Flask-Login==0.4.1
-Flask-OpenID==1.2.5
-Flask-RESTful==0.3.7
-Flask-SQLAlchemy==2.4.1
-flask-swagger==0.2.13
-Flask-WTF==0.14.2
-fs==2.1.0
+flake8==3.8.3
 fsspec==0.6.3
-funcsigs==1.0.0
 future==0.18.2
-gast==0.2.2
-gevent==1.4.0
-gin-config==0.1.4
-google-api-python-client==1.7.8
-google-auth==1.6.3
-google-auth-httplib2==0.0.3
-google-pasta==0.2.0
-googleapis-common-protos==1.5.10
-graphviz==0.13.2
-greenlet==0.4.15
-grequests==0.4.0
-grpcio==1.16.1
-gspread==3.3.0
-gunicorn==19.9.0
-gym==0.12.1
-h5py==2.9.0
-html5lib==1.0.1
-httplib2==0.17.1
-idna==2.8
-idna-ssl==1.1.0
-ijson==2.4
-imagesize==1.1.0
-importlib-metadata @ file:///opt/concourse/worker/volumes/live/c15100a6-3aca-4bde-70bd-9279a634b55b/volume/importlib-metadata_1593446478014/work
-intervaltree==3.0.2
-ipdb==0.11
-ipykernel @ file:///opt/concourse/worker/volumes/live/43eaf185-e9cd-4e78-5afa-c19accf1339d/volume/ipykernel_1596206683810/work/dist/ipykernel-5.3.4-py3-none-any.whl
-ipynb==0.5.1
-ipython @ file:///opt/concourse/worker/volumes/live/8c453bb6-500b-4747-778c-a236ae4a574d/volume/ipython_1593447395779/work
+googleapis-common-protos==1.52.0
+grpcio==1.33.1
+idna @ file:///tmp/build/80754af9/idna_1593446292537/work
+importlib-metadata==2.0.0
+install==1.3.4
+instapy==0.6.11
+ipykernel @ file:///opt/concourse/worker/volumes/live/73e8766c-12c3-4f76-62a6-3dea9a7da5b7/volume/ipykernel_1596206701501/work/dist/ipykernel-5.3.4-py3-none-any.whl
+ipython @ file:///opt/concourse/worker/volumes/live/bb221eaa-cc1a-4ab2-40f7-74a2020a44b1/volume/ipython_1599056234390/work
 ipython-genutils==0.2.0
-ipywidgets==7.1.2
-iso8601==0.1.12
-isodate==0.6.0
+ipywidgets==7.5.1
 isort==4.3.21
-itsdangerous==0.24
-jedi @ file:///opt/concourse/worker/volumes/live/565dbe5a-443f-465a-7ff2-b61f4a5f081d/volume/jedi_1598371617578/work
+jedi @ file:///opt/concourse/worker/volumes/live/152cd167-7b79-4fbd-5c97-d7b338805c2b/volume/jedi_1598371617305/work
 Jinja2==2.11.2
 jinja2-time==0.2.0
-jmespath==0.9.5
-joblib==0.13.2
-jovian==0.2.18
-json-merge-patch==0.2
-jsonschema==3.2.0
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1594826976318/work
+jmespath==0.10.0
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==6.1.7
+jupyter-console==6.2.0
 jupyter-core==4.6.3
-kedro==0.16.6
+jupyterlab==0.31.1
+jupyterlab-launcher==0.10.5
+jupyterlab-pygments==0.1.2
+kedro==0.16.5
 kedro-docker==0.2.1
-Keras==2.2.4
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
-keyring==18.0.0
-kfac==0.1.4
-kiwisolver==1.1.0
-knnimpute==0.1.0
-lazy-object-proxy==1.4.2
-libarchive-c==2.8
-librosa==0.6.3
-llvmlite==0.24.0
-lockfile==0.12.2
-lxml==4.5.2
-# Editable install with no version control (magenta==1.1.1)
--e /Users/andremartins/miniconda3/lib/python3.6/site-packages
-Mako==1.1.0
-Markdown @ file:///opt/concourse/worker/volumes/live/620d0872-91cd-4b4f-4cf7-3225c9a5f242/volume/markdown_1597433230690/work
 MarkupSafe==1.1.1
-marshmallow==2.19.5
-marshmallow-enum==1.5.1
-marshmallow-sqlalchemy==0.18.0
-matplotlib==3.1.1
 mccabe==0.6.1
-MechanicalSoup==0.12.0
-mesh-tensorflow==0.0.5
-mido==1.2.6
-mir-eval==0.5
+MeaningCloud-python==2.0.0
 mistune==0.8.4
-mkl-fft==1.0.14
-mkl-random==1.0.2
-mkl-service==2.0.2
-mock==3.0.5
-mpmath==1.1.0
-msrest==0.6.6
-msrestazure==0.6.0
-multidict==4.6.1
-multiprocess==0.70.6.1
-mysql-connector==2.2.9
-nbconvert==5.6.1
+mkl-fft==1.2.0
+mkl-random==1.1.1
+mkl-service==2.3.0
+more-itertools==8.5.0
+nbclient==0.5.0
+nbconvert==6.0.6
 nbformat==5.0.7
-networkx==1.8.1
-nltk==3.4.5
-nose==1.3.7
-notebook==6.0.0
-np-utils==0.5.7.0
-numba==0.39.0
-numexpr==2.6.8
-numpy==1.18.2
-numpydoc==0.9.1
-oauth2client==4.1.3
-oauthlib==3.0.1
-olefile==0.46
-opencv-python==4.1.0.25
-ordereddict==1.1
-osqp==0.5.0
-packaging==19.1
-pandarallel==1.4.2
-pandas @ file:///opt/concourse/worker/volumes/live/06184e62-4873-4c9d-6684-e81c4eb76ca5/volume/pandas_1598371475329/work
-pandas-profiling==1.4.1
+nbstripout==0.3.3
+nest-asyncio==1.4.1
+notebook==6.1.4
+numpy @ file:///opt/concourse/worker/volumes/live/40d975a3-7e82-44c8-53df-feccdbce8b96/volume/numpy_and_numpy_base_1596233859108/work
+packaging==20.4
+pandas @ file:///opt/concourse/worker/volumes/live/993437e5-6177-49a4-48b9-0912ecc50f00/volume/pandas_1598371475214/work
 pandocfilters==1.4.2
-parse==1.12.0
-parso==0.7.0
-pathtools==0.1.2
-patsy==0.5.1
-PDPbox==0.2.0
-pendulum==1.4.4
+parso==0.7.1
+pathspec==0.8.0
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow @ file:///opt/concourse/worker/volumes/live/dda2ed08-74a0-47b1-4b92-3e662849d96e/volume/pillow_1594307366244/work
 pip-tools==5.3.1
-plotly==4.2.1
 pluggy==0.13.1
-plumbum==1.6.7
-poyo==0.4.2
-pretty-midi==0.2.8
-prison==0.1.2
-prometheus-client==0.7.1
-promise==2.2.1
+plyer==1.4.3
+poyo==0.5.0
+prometheus-client==0.8.0
 prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1598885458782/work
-protobuf==3.8.0
-psutil==5.6.3
+protobuf==3.13.0
 ptyprocess==0.6.0
-pyarrow==0.10.0
-pyasn1==0.4.5
-pyasn1-modules==0.2.5
-pybase64==1.0.0
-pycodestyle==2.5.0
-pycosat==0.6.3
-pycparser==2.19
-pycryptodomex==3.9.0
-pydeck==0.3.0b3
-pydocumentdb==2.3.3
-pyee==7.0.3
-pyflakes==2.1.1
-pygame==1.9.6
-pyglet==1.3.2
+py==1.9.0
+pycodestyle==2.6.0
+pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
+pyflakes==2.2.0
 Pygments @ file:///tmp/build/80754af9/pygments_1600458456400/work
-pygtrie==2.3
-PyJWT==1.7.1
-pylint==2.3.1
-pyodbc==4.0.24
-pyOpenSSL==19.0.0
-pyparsing==2.4.2
-pypng==0.0.19
-pyppeteer==0.2.2
-pyquery==1.4.1
-pyrsistent @ file:///opt/concourse/worker/volumes/live/d7ed6755-1956-4a16-5499-c03638db758d/volume/pyrsistent_1600141722278/work
-PySocks==1.7.0
-pytest-runner==4.2
-python-daemon==2.1.2
+pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1594392929924/work
+pyparsing==2.4.7
+pyrsistent==0.17.3
+PySocks==1.7.1
+pytest==5.4.3
+pytest-cov==2.10.1
+pytest-mock==1.13.0
 python-dateutil==2.8.1
-python-dotenv==0.11.0
-python-editor==1.0.4
-python-json-logger==0.1.9
-python-rtmidi==1.1.2
-python3-openid==3.1.0
+python-dotenv==0.14.0
+python-json-logger==0.1.11
+python-telegram-bot==13.0
 pytz==2020.1
-pytzdata==2019.3
-PyYAML==5.1.2
+PyVirtualDisplay==1.3.2
+PyYAML==5.3.1
 pyzmq==19.0.2
-QtAwesome==0.5.7
-qtconsole==4.5.4
+qtconsole==4.7.7
 QtPy==1.9.0
-requests==2.22.0
-requests-futures==1.0.0
-requests-html==0.10.0
-requests-oauthlib==1.2.0
-resampy==0.2.1
-retrying==1.3.3
-rope==0.14.0
-rsa==4.0
-ruamel-yaml==0.15.46
-runipy==0.1.5
-s3transfer==0.3.3
-scikit-learn==0.21.2
-scikit-optimize==0.5.2
-scipy @ file:///opt/concourse/worker/volumes/live/d2cc8ac1-8922-48bc-7969-1f576a9f572d/volume/scipy_1597686637832/work
-scs==2.0.2
-seaborn==0.9.0
+regex==2020.9.27
+requests @ file:///tmp/build/80754af9/requests_1592841827918/work
+selenium @ file:///Users/runner/miniforge3/conda-bld/selenium_1602632417104/work
 Send2Trash==1.5.0
-setproctitle==1.1.10
-simple-http-server==0.3.1
-simplegeneric==0.8.1
-simplejson==3.16.0
-simpy==3.0.12
 six==1.15.0
-sk-video==1.1.10
-snowballstemmer==1.9.0
-snowflake-connector-python==1.9.0
-snowflake-sqlalchemy==1.1.14
-sonnet==0.1.6
-sortedcontainers==2.1.0
 soupsieve==2.0.1
-sox==1.3.7
-Sphinx==2.1.2
-sphinxcontrib-applehelp==1.0.1
-sphinxcontrib-devhelp==1.0.1
-sphinxcontrib-htmlhelp==1.0.2
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.2
-sphinxcontrib-serializinghtml==1.1.3
-sphinxcontrib-websupport==1.1.0
-spyder==3.3.1
-spyder-kernels==0.5.1
-SQLAlchemy==1.3.8
-SQLAlchemy-JSONField==0.9.0
-SQLAlchemy-Utils==0.36.1
-statsmodels==0.9.0
-streamlit==0.57.1
-sympy==1.4
-tables==3.4.4
-tabulate==0.8.6
-tenacity==4.12.0
-tensor2tensor==1.13.4
-tensorboard==1.14.0
-tensorflow==1.14.0
-tensorflow-datasets==1.0.2
-tensorflow-estimator==1.14.0
-tensorflow-metadata==0.13.0
-tensorflow-probability==0.6.0
-termcolor==1.1.0
-terminado==0.8.2
+terminado==0.9.1
 testpath==0.4.4
-text-unidecode==1.2
-Theano==1.0.3+2.g3e47d39.dirty
-thrift==0.11.0
-toml==0.10.0
-toolz==0.10.0
+toml==0.10.1
 toposort==1.5
 tornado==6.0.4
-tqdm==4.49.0
-traitlets==4.3.3
-twitter-scraper==0.4.4
-typed-ast==1.3.4
-typing==3.7.4.1
-typing-extensions==3.7.4.1
-tzlocal==1.5.1
-unicodecsv==0.14.1
-uritemplate==3.0.0
-urllib3==1.25.8
-uuid==1.30
-validators==0.14.2
-viz==0.0.5
-w3lib==1.22.0
-watchdog==0.10.2
+tqdm==4.51.0
+traitlets==5.0.4
+typed-ast==1.4.1
+tzlocal==2.1
+urllib3 @ file:///tmp/build/80754af9/urllib3_1597086586889/work
 wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
+webdriverdownloader==1.1.0.3
 webencodings==0.5.1
-websockets==8.1
-Werkzeug==0.15.5
-whichcraft==0.5.2
-widgetsnbextension==3.1.4
-wrapt==1.11.2
-WTForms==2.2.1
-wurlitzer==1.0.3
-xgboost==0.80
-yarl==1.3.0
-zipp==3.1.0
-zope.deprecation==4.4.0
+whichcraft==0.6.1
+widgetsnbextension==3.5.1
+zipp==3.2.0
